--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,13 @@
     "eslint": "^8.57.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.3",
     "nodemon": "^3.1.0"
   }
 }
